--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jspdf": "^3.0.4",
     "lucide-react": "^0.553.0",
     "mongoose": "^8.19.4",
     "next": "16.0.3",
